# Baseball-Avoidance-Multirotor-BAM

./: .gitattributes  .gitignore  CITATION.cff  README.html  README.md  setup.m
AeroProp/: IMPACT_AeroProp_RSE_V1_10Jun25_180239.m  IMPACT_props2.m  Nom_AeroProp.slx  Poly_AeroProp.slx  README.html  README.md  Thrust2RpmPolyMdl.m  Thrust2RpmPolyMdl_Impact.m  compute_multirotor_FM.m  quad_drag.m
AutoCodeModels/: README.html  README.md  build.m  buildExe.m  buildExeRos.m  buildLib.m  buildLibRos.m  buildWithRos.m  grt_make_rtw_hook.m  sim_build.m
AutoCodeModels/examples/: exampleBAMbatch.bat
AutoCodeModels/src/: readPfile.c  readPfile.h  rt_malloc_main.c  rt_malloc_main.cpp
AutoCodeModels/utilities/: bytePacking.m  convertArrayToStruct.m  createTimeseries.m  listStruct.m  parseCMakeLists.m  parseMakefile.m  parseRspFile.m  readPfile.m  vectorizeUserSimOut.m  writePfile.m
BamEcho/: BamEcho.json  BamEcho.py  README.html  README.md  TwoObjects_Scen02_bb_20250324_0922.csv  TwoObjects_Scen02_rotor_20250324_0922.csv  bamCsvLoad.py  genBamEchoScenario.m  settings.json
BamEcho/AirsimJsonExamples/: Readme.html  Readme.md  settings - 1080Scene720Depth_1veh.json  settings - 1080res_1veh.json  settings - 720res_1veh.json
BamEcho/UnrealAssets/: BamBaseball.7z
Bez_Functions/: Plot_PW_Bezier.m  README.html  README.md  affineChange.m  binomCoeffs.m  decodeBezierArray.m  diffBernControl.m  encodeBezierArray.m  evalBernBasis.m  evalBernPoly.m  evalPWCurve.m  evalSegments.m  genPWCurve.m  intBernControl.m  interpHermBern.m  rotation_subtract.m
ChallengeProblem/: Create_BBall_Traj.m  Create_OwnShip_Traj.m  Plot_Chal_Prob_DSets.m  README.html  README.md
Examples/: README.html  README.md  buildPackages.bat  example_circle.m  example_collision_avoidance.m  example_customTrajectory.m  example_landing.m  example_modifyIC.m  example_template.m  launchMatlab.bat  run_bam.bash  run_bam.bat
ROS2_ws/: README.html  README.md
ROS2_ws/analysis_pkgs/: README.html  README.md
ROS2_ws/analysis_pkgs/phase_space_warping_py/: README.html  README.md  package.xml  setup.cfg  setup.py
ROS2_ws/analysis_pkgs/phase_space_warping_py/phase_space_warping_py/: phase_space_warping.py
ROS2_ws/interfaces_pkgs/: README.html  README.md
ROS2_ws/interfaces_pkgs/ros_msg_iface/: CMakeLists.txt  README.html  README.md  package.xml
ROS2_ws/interfaces_pkgs/ros_msg_iface/include/ros_msg_iface/: ros_msg_iface.hpp
ROS2_ws/interfaces_pkgs/ros_msg_iface/src/: ros_msg_iface.cpp
ROS2_ws/launch_pkgs/: README.html  README.md
ROS2_ws/launch_pkgs/bam_launcher/: package.xml  setup.cfg  setup.py
ROS2_ws/launch_pkgs/bam_launcher/launch/: bam_launch.py
ROS2_ws/s_function_pkgs/: README.html  README.md
ROS2_ws/s_function_pkgs/publishers/mat_airsim_bball_pub/: CMakeLists.txt  package.xml
ROS2_ws/s_function_pkgs/publishers/mat_airsim_bball_pub/src/: mat_airsim_bball_pub.cpp  ros_bball_msg_sim.cpp
ROS2_ws/s_function_pkgs/publishers/mat_airsim_pub_nonlib/: CMakeLists.txt  package.xml
ROS2_ws/s_function_pkgs/publishers/mat_airsim_pub_nonlib/src/: mat_airsim_pub_nonlib.cpp
ROS2_ws/s_function_pkgs/subscribers/psw_sub/: CMakeLists.txt  install_psw_sub.sh  package.xml
ROS2_ws/s_function_pkgs/subscribers/psw_sub/src/: PSWSubscriber.cpp  psw_sub.cpp
ROS2_ws/visualization_pkgs/: README.html  README.md  UNREALENVIRONMENT.html  UNREALENVIRONMENT.md
ROS2_ws/visualization_pkgs/bam_2_airsim/: CMakeLists.txt  README.html  README.md  Sample_settings.json  package.xml
ROS2_ws/visualization_pkgs/bam_2_airsim/Bam2Airsim/: CMakeLists.txt
ROS2_ws/visualization_pkgs/bam_2_airsim/Bam2Airsim/include/: BamAirsimNode.hpp
ROS2_ws/visualization_pkgs/bam_2_airsim/Bam2Airsim/src/: Bam2Airsim.cpp  BamAirsimNode.cpp
ROS2_ws/visualization_pkgs/bam_2_airsim/TestPosePub/: CMakeLists.txt
ROS2_ws/visualization_pkgs/bam_2_airsim/TestPosePub/include/: BamTestPubNode.hpp
ROS2_ws/visualization_pkgs/bam_2_airsim/TestPosePub/src/: BamTestPubNode.cpp  TestPosePub.cpp
ROS2_ws/visualization_pkgs/bam_2_airsim/spdlog/: CMakeLists.txt
ROS2_ws/visualization_pkgs/bam_2_airsim/spdlog/tests/: CMakeLists.txt
ROS2_ws/visualization_pkgs/drone_plotter_py/: README.html  README.md  package.xml  setup.cfg  setup.py
ROS2_ws/visualization_pkgs/drone_plotter_py/drone_plotter_py/: drone_plotter.py
Ref_Models/: Dyn_Params.slx  Elasped_Time.slx  PropModelBAM.slx  README.html  README.md  SimOut.slx
Ref_Models/Autocode_RT_Pacing/: Autocode_RT_Pacing.slx  README.html  README.md  license.txt  rttime_example.mdl  sfun_rttime.c  sfun_rttime.mexmaca64  sfun_rttime.mexw64
Ref_Models/Baseball/: BaseballAero.slx  Dynamics.slx  README.html  README.md
Ref_Models/Controller/: Control_Allocation.slx  FCS_Parameters.slx  README.html  README.md  Thrust_to_RPM_MDL.slx
Ref_Models/Environment/: Environment.slx  README.html  README.md
Ref_Models/Plots/: README.html  README.md  Sim_Plots.slx  plot_multirotor_states.m  plot_trajectories.m
Ref_Models/ROS2/: ROS2.slx  ROS2_Bball.slx  ROS2_Bball_MatPub.slx  ROS2_Bball_MatPub_NonLib.slx  ROS2_MatPub.slx  ROS2_MatPub_NonLib.slx  ROS2_MatSub.slx
Ref_Models/Sensors/: README.html  README.md  Sensors.slx
Trim/: Aero_Eval.m  Comp_thrust2rpm.m  Gen_Trim_Map.m  Gen_Trim_Map_Poly.m  Poly_T_map.mat  README.html  README.md  T_map.mat  euler2q_sim.m  mycost.m  mycost_poly.m  nldyn_sim_eqn.m  nldyn_sim_eqn_poly.m  nlinCon_poly.m
Util/: UG_Create.bat  buildBusObject.m  determineNedHeading.m  downgradeModelsTo2024a.m  pandoc.css  resizeFig.m
lib/: BezierLib.slx  DoubletsLib.slx  ServosLib.slx
lib/utilities/: Euler2quat.m  Euler2quat_rad.m  EulerTransf_v2.m  llh2ecef.m  setPlot.m  setUnits.m
setup/: README.html  README.md  SETUP.MD  SETUP.html  setupFiles.m  setupPath.m
setup/Bus_Definitions/: EnvironmentBus.m  EomBus.m  ForceMomentBus.m  PropCmdBus.m  RefInputBus.m  RefInputInerBus.m  SimOutBus.m  setupBuses.m  setupUserSimOutBus.m
setup/Enumerations/: ActuatorEnum.m  AtmosphereEnum.m  Bball_RefInputEnum.m  DataOutEnum.m  EOMEnum.m  PaceEnum.m  PubEnum.m  RefInputEnum.m  SubEnum.m  TurbulenceEnum.m
(+107 files in other folders)
