<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bam_2_airsim_pkg</name>
  <version>0.0.0</version>
  <description>Server Exchange for BAM Ros Nodes and Airsim Unreal Visualization</description>
  <maintainer email="daniel.r.hill@nasa.gov">drhill</maintainer>
  <license>Subject to any licensing applied to BAM</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
